{{$NEXT}}

2.43    2020-10-21

- This release is based on version 2020d of the Olson database. This release
  includes contemporary changes for Palestine.


2.42    2020-10-16

- This release is based on version 2020c of the Olson database. This release
  includes contemporary changes for Fiji.


2.41    2020-10-07

- The last release was missing all the generated data files. Oops! Reported by
  Paul Howarth. GH #43.

- Added a custom dzil plugin to make sure that the release has all of the
  generated data files.


2.40    2020-10-07

- This release is based on version 2020b of the Olson database. This release
  includes contemporary changes for Morocco, Casey Station, and the
  Yukon. This release also removes the very long-deprecated "US/Pacific-New"
  zone name.


2.39    2020-04-24

- This release is based on version 2020a of the Olson database. This release
  includes contemporary changes for Morocco and the Yukon.


2.38    2019-11-15

- Added support for Etc/GMT and Etc/UTC style zones like "Etc/GMT-2" or
  "Etc/UTC+12". Implemented by kclaggett. GH #38.


2.37    2019-09-11

- This release is based on version 2019c of the Olson database. This release
  includes contemporary changes for Fiji and Norfolk Island.


2.36    2019-07-01

- This release is based on version 2019b of the Olson database. This release
  includes contemporary changes for Brazil and Palestine.


2.35    2019-04-21

- Handle "infinity" as a representation of infinite values in serialized
  objects. On Solaris we end up with "infinity" and "-infinity" as opposed to
  just "inf" and "-inf". Fixed by Andrew Paprocki. GH #36.


2.34    2019-03-26

- This release is based on version 2019a of the Olson database. This release
  includes contemporary changes for Palestine and Metlakatla, Alaska.


2.23    2018-12-30

- This release is based on version 2018i of the Olson database. This release
  includes contemporary changes for São Tomé and Príncipe.


2.22    2018-12-29
