@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+- The DateTime::TimeZone->offset_as_string now accepts an optional separator
+  string.
+
+
 2.43    2020-10-21
 
 - This release is based on version 2020d of the Olson database. This release
